--- a/index.html
+++ b/index.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/media.css" />
 </head>
+
 <body>
 
     <header>
-      <div>
-        <a href="index.html">Swaroop Kondreddy</a>
-        <nav>
-          <a href="./index.html">About</a>
-          <a href="./portfolio.html">Portfolio</a>
-          <a href="./contact.html">Contact</a>
-        </nav>
-      </div>
+        <div class="container">
+            <a href="index.html" id="head-name">Swaroop Kondreddy</a>
+            <nav>
+                <a href="./index.html">About</a>
+                <a href="./portfolio.html">Portfolio</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
-  
-    <div>
-      <section>
-        <h1>About Me</h1>
-  
-    
-      </section>
+
+    <div class="container" id="main-container">
+        <section class="main-section">
+            <h1>About Me</h1>
+            <img src="assets/images/profile.jpg" class="profile-image" alt="Swaroop Kondreddy">
+
+            <p> I was born in South India, and finished my computer Science engineering from Andhra University. After
+                that I joined TCS as a junior software developer with mainframe as my main technology. Later I was sent
+                to US to client location, where I quit TCS to join MBA at University of Florida. At University of
+                Florida I was able to complete my MBA with highest degree honors with concentration in IT strategy.</p>
+
+            <p>For the last 5 years, I have been working as Sr. Java Developer for Energy Trading company in
+                Greensburg, PA. I am happily married and I have a 3 year old son. I love to watch animation movies,
+                enjoy restaurants and playing with my son.</p>
+
+        </section>
     </div>
-  
+
     <footer>
-      <div>
-        Copyright &copy; Swaroop Kondreddy 
-      </div>
+        <div class="container">
+            &copy; Swaroop Kondreddy
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
