--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/media.css" />
 </head>
 <body>
 
     <header>
-      <div>
-        <a href="index.html">Swaroop Kondreddy</a>
+      <div class="container">
+        <a href="index.html" id="head-name">Swaroop Kondreddy</a>
         <nav>
           <a href="./index.html">About</a>
           <a href="./portfolio.html">Portfolio</a>
@@ -21,7 +22,7 @@
       </div>
     </header>
   
-    <div>
+    <div class="container">
       <section>
         <h1>About Me</h1>
   
@@ -30,8 +31,8 @@
     </div>
   
     <footer>
-      <div>
-        Copyright &copy; Swaroop Kondreddy 
+      <div class="container">
+        &copy; Swaroop Kondreddy 
       </div>
     </footer>
   </body>
