--- a/portfolio.html
+++ b/portfolio.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/media.css" />
 </head>
+
 <body>
 
     <header>
-      <div class="container">
-        <a href="index.html" id="head-name">Swaroop Kondreddy</a>
-        <nav>
-          <a href="./index.html">About</a>
-          <a href="./portfolio.html">Portfolio</a>
-          <a href="./contact.html">Contact</a>
-        </nav>
-      </div>
+        <div class="container">
+            <a href="index.html" id="head-name">Swaroop Kondreddy</a>
+            <nav>
+                <a href="./index.html">About</a>
+                <a href="./portfolio.html">Portfolio</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
-  
-    <div class="container">
-      <section>
-        <h1>About Me</h1>
-  
-    
-      </section>
+
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1>Portfolio</h1>
+            <div class="work circle">
+                <img src="./assets/images/image1.jpg" alt="Hangman">
+                <h3>Hangman</h3>
+            </div>
+            <div class="work circle">
+                <img src="./assets/images/image2.jpg" alt="RPG Game">
+                <h3>RPG Game</h3>
+            </div>
+            <div class="work circle">
+                <img src="./assets/images/image3.jpg" alt="Trivia Game">
+                <h3>Trivia Game</h3>
+            </div>
+            <div class="work circle">
+                <img src="./assets/images/image4.jpg" alt="Rutgers Info Widget">
+                <h3>Rutgers Info Widget</h3>
+            </div>
+            <div class="work circle">
+                <img src="./assets/images/image5.jpg" alt="Rock Paper Scissors">
+                <h3>Rock Paper Scissors</h3>
+            </div>
+        </section>
     </div>
-  
+
     <footer>
-      <div class="container">
-        &copy; Swaroop Kondreddy 
-      </div>
+        <div class="container">
+            &copy; Swaroop Kondreddy
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
