--- a/contact.html
+++ b/contact.html
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/media.css" />
 </head>
+
 <body>
 
     <header>
-      <div class="container">
-        <a href="index.html" id="head-name">Swaroop Kondreddy</a>
-        <nav>
-          <a href="./index.html">About</a>
-          <a href="./portfolio.html">Portfolio</a>
-          <a href="./contact.html">Contact</a>
-        </nav>
-      </div>
+        <div class="container">
+            <a href="index.html" id="head-name">Swaroop Kondreddy</a>
+            <nav>
+                <a href="./index.html">About</a>
+                <a href="./portfolio.html">Portfolio</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
-  
+
     <div id="main-container" class="container">
         <section class="main-section">
-          <h1>Contact</h1>
-    
-          <form id="contact-form">
-            <ul>
-              <li>
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-              </li>
-              <li>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-              </li>
-              <li>
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required="required"></textarea>
-              </li>
-            </ul>
-            <input type="submit">
-          </form>
-    
+            <h1>Contact</h1>
+
+            <form id="contact-form">
+                <ul>
+                    <li>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+                    </li>
+                    <li>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+                    </li>
+                    <li>
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" required="required"></textarea>
+                    </li>
+                </ul>
+                <input type="submit" class="border">
+            </form>
+
         </section>
     </div>
-  
+
     <footer>
-      <div class="container">
-        &copy; Swaroop Kondreddy 
-      </div>
+        <div class="container">
+            &copy; Swaroop Kondreddy
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
