--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
                 <input type="submit" class="border">
             </form>
 
+            <button type="button">Test</button>
         </section>
     </div>
 
