href hangman portfolio to github page

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,10 @@
         <section class="main-section">
             <h1>Portfolio</h1>
             <div class="work circle">
-                <img src="./assets/images/image1.jpg" alt="Hangman">
-                <h3>Hangman</h3>
+                <a href="https://swaroopreddyk.github.io/Hangman-Game/" target="blank">
+                    <img src="./assets/images/hangman.png" alt="Hangman">
+                    <h3>Hangman</h3>
+                </a>
             </div>
             <div class="work circle">
                 <img src="./assets/images/image2.jpg" alt="RPG Game">
