add psychic game

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,10 @@
                 </a>
             </div>
             <div class="work circle">
-                <img src="./assets/images/image2.jpg" alt="RPG Game">
-                <h3>RPG Game</h3>
+                <a href="https://swaroopreddyk.github.io/Psychic-Game/" target="blank">
+                    <img src="./assets/images/crystal_ball.jpg" alt="Psychic-Game">
+                    <h3>The Psychic Game</h3>
+                </a>
             </div>
             <div class="work circle">
                 <img src="./assets/images/image3.jpg" alt="Trivia Game">
