open the portfolios in new tabs

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,13 @@
         <section class="main-section">
             <h1>Portfolio</h1>
             <div class="work circle">
-                <a href="https://swaroopreddyk.github.io/Hangman-Game/" target="blank">
+                <a href="https://swaroopreddyk.github.io/Hangman-Game/" target="_blank">
                     <img src="./assets/images/hangman.png" alt="Hangman">
                     <h3>Hangman</h3>
                 </a>
             </div>
             <div class="work circle">
-                <a href="https://swaroopreddyk.github.io/Psychic-Game/" target="blank">
+                <a href="https://swaroopreddyk.github.io/Psychic-Game/" target="_blank">
                     <img src="./assets/images/crystal_ball.jpg" alt="Psychic-Game">
                     <h3>The Psychic Game</h3>
                 </a>
