--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,10 @@
                 </a>
             </div>
             <div class="work circle">
-                <img src="./assets/images/image3.jpg" alt="Trivia Game">
-                <h3>Trivia Game</h3>
+                <a href="https://swaroopreddyk.github.io/CrystalCollector/" target="_blank">
+                    <img src="./assets/images/kryptonite.jpg" alt="Crystal-Collector">
+                    <h3>Crystal-Collector</h3>
+                </a>
             </div>
             <div class="work circle">
                 <img src="./assets/images/image4.jpg" alt="Rutgers Info Widget">
