add friends trivia

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,8 +46,10 @@
                 </a>
             </div>
             <div class="work circle">
-                <img src="./assets/images/image4.jpg" alt="Rutgers Info Widget">
-                <h3>Rutgers Info Widget</h3>
+                <a href="https://swaroopreddyk.github.io/TriviaGame/" target="_blank">
+                    <img src="./assets/images/Friends.jpg" alt="Crystal-Collector">
+                    <h3>F.R.I.E.N.D.S Trivia</h3>
+                </a>
             </div>
             <div class="work circle">
                 <img src="./assets/images/image5.jpg" alt="Rock Paper Scissors">
