add giftastic assignment

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,13 +47,15 @@
             </div>
             <div class="work circle">
                 <a href="https://swaroopreddyk.github.io/TriviaGame/" target="_blank">
-                    <img src="./assets/images/Friends.jpg" alt="Crystal-Collector">
+                    <img src="./assets/images/Friends.jpg" alt="Trivia-Game">
                     <h3>F.R.I.E.N.D.S Trivia</h3>
                 </a>
             </div>
             <div class="work circle">
-                <img src="./assets/images/image5.jpg" alt="Rock Paper Scissors">
-                <h3>Rock Paper Scissors</h3>
+                <a href="https://swaroopreddyk.github.io/Giftastic/" target="_blank">
+                    <img src="./assets/images/transformers.png" alt="Giftastic-Game">
+                    <h3>TRANSFORMERS Giftastic</h3>
+                </a>
             </div>
         </section>
     </div>
