add train scheduler to Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,10 +51,16 @@
                     <h3>F.R.I.E.N.D.S Trivia</h3>
                 </a>
             </div>
-            <div class="work circle">
+            <!-- <div class="work circle">
                 <a href="https://swaroopreddyk.github.io/Giftastic/" target="_blank">
                     <img src="./assets/images/transformers.png" alt="Giftastic-Game">
                     <h3>TRANSFORMERS Giftastic</h3>
+                </a>
+            </div> -->
+            <div class="work circle">
+                <a href="https://swaroopreddyk.github.io/Train-Scheduler/" target="_blank">
+                    <img src="./assets/images/train.jpg" alt="Train Scheduler">
+                    <h3>Train Scheduler</h3>
                 </a>
             </div>
         </section>
